# WJ-8000

./: .gitignore  CMakeLists.txt  README.md
Resources/Factory/: FactoryBank.syx
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/MIDI/: DW8000SysEx.cpp  DW8000SysEx.h
Source/Synth/: DW8000Arpeggiator.cpp  DW8000Arpeggiator.h  DW8000Delay.cpp  DW8000Delay.h  DW8000Engine.cpp  DW8000Engine.h  DW8000MG.cpp  DW8000MG.h  DW8000Patch.cpp  DW8000Patch.h  DW8000Voice.cpp  DW8000Voice.h
Source/Synth/DWGS/: DWGSOscillator.cpp  DWGSOscillator.h  DWGSWavetableBank.cpp  DWGSWavetableBank.h
Source/Synth/Envelope/: ADBSSR.cpp  ADBSSR.h
Source/Synth/Filter/: NJM2069.cpp  NJM2069.h
public/DW8000/DW8000 sysex/: DW8000 Bank B.syx  DW8000 Bank C.syx  DW8000 New from Jack.syx  DW8000 Preload Side B.syx  DW8000 Walt sounds.syx  MEX Bank A.syx  MEX Bank D.syx
public/DW8000/Korg DW-8000 ReMOTE template/: DW-8000 PG1.syx  DW-8000 PG2.syx  Read me first.doc
public/DW8000/Lukas collection 2016/: DW8000 Lukas collection 2016 all patches.syx
